HW1 - Refactoring  and fixies

--- a/src/main/webapp/css/meals.css
+++ b/src/main/webapp/css/meals.css
@@ -20,3 +20,12 @@ th {
 .red {
     color: red;
 }
+
+.btn-cancel {
+    background-color: lightgrey;
+    color: black;
+    padding: 10px 15px;
+    text-decoration: none;
+    border-radius: 5px;
+    border-color: black;
+}
